tests/integration/fail/enum_contract_empty_enum.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
'foo | [| |]
